prepare global and ldz-common start scripts that can be used to execute java application jar with specified parameters